data/derived/fa15/progs/unify/prog2678.ml.out
Characters 80-85:
  | Sine e' -> sin (3.142 * exprToString e')
                    ^^^^^
Error: This expression has type float but an expression was expected of type
         int
